New internal class SegureConfigurations and add it in the GitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Internal class that contais important informations
+SecureConfigurations.cs
