--- a/LoginSystem/packages.config
+++ b/LoginSystem/packages.config
@@ -16,7 +16,7 @@
   <package id="Grpc.Core.Api" version="2.66.0" targetFramework="net48" />
   <package id="Grpc.Net.Client" version="2.66.0" targetFramework="net48" />
   <package id="Grpc.Net.Common" version="2.66.0" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.3" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="6.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
@@ -24,12 +24,16 @@
   <package id="System.CodeDom" version="7.0.0" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.1" targetFramework="net48" />
+  <package id="System.IO.Pipelines" version="9.0.3" targetFramework="net48" />
   <package id="System.Linq.Async" version="6.0.1" targetFramework="net48" />
   <package id="System.Management" version="7.0.2" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Net.Http.Json" version="9.0.3" targetFramework="net48" />
   <package id="System.Net.Http.WinHttpHandler" version="8.0.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="9.0.3" targetFramework="net48" />
+  <package id="System.Text.Json" version="9.0.3" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
